helm/charts/webtop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
spec:
  selector:
    app: webtop
  ports:
    - port: 3000
