helm/charts/webtop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop
spec:
  rules:
    - host: home.koudijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webtop
                port:
                  number: 3000
  tls:
    - secretName: home-koudijs-lan
      hosts:
        - home.koudijs.lan
